files missed in the prior commit

--- a/belizeweb/SS2023/team.html
+++ b/belizeweb/SS2023/team.html
@@ -64,7 +64,7 @@
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/katie750x1000_72R-2.jpg" alt="Photo of Katie W" /></span>
 											<center>
 												<h3>Katie W</h3>
-												Senior<br> Computer Science
+												Computer Science &amp; Criminal Justice
 											</center>
 										</div><!-- Katie -->
                                         
@@ -80,7 +80,6 @@
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/judy750x1000.jpg" alt="Photo of Joao Vitor" /></span>
 											<center>
 												<h3>Judy</h3>
-												Senior<br>
 												Computer Science
 											</center>
 										</div> <!--Judy-->
@@ -88,14 +87,14 @@
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/khushiVora750x1000r72.jpeg" alt="Photo of Khushi" /></span>
 											<center>
 												<h3>Khushi</h3>
-												Senior<br> Computer Science
+												Computer Science
 											</center>
 										</div><!-- Khushi -->
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/jessiccaHernandez750x1000_72R.png" alt="Photo of Jessicca" /></span>
 											<center>
 												<h3>Jessika</h3>
-												Senior<br> Computer Science
+												Mathematics
 											</center>
 										</div><!-- Jessika -->
 
@@ -103,7 +102,7 @@
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/ryan750x1000r72.png" alt="Photo of Ryan" /></span>
 											<center>
 												<h3>Ryan</h3>
-												Senior<br> Applied Engineering
+												Applied Engineering
 											</center>
 										</div><!-- Ryan -->
 
@@ -121,34 +120,30 @@
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/sammyhead750x1000r72.jpeg" alt="Photo of Sammy" /></span>
 											<center>
 												<h3>Sammy</h3>
-												Student<br>
-												Major
+												Experience Architecture (CS Minor)
 											</center>
 										</div><!-- Sammy -->
 
 
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/NajihaJaigirdar750x1000_72R.jpg" alt="Photo of Najiha" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/najihaSS23.png" alt="Photo of Najiha" /></span>
 											<center>
 												<h3>Najiha</h3>
-												Student<br>
-												Major
+												Computer Engineering &amp; Graphic Design
 											</center>
 										</div><!-- Najiha -->
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Benjamin" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/benjamin2023.jpeg" alt="Photo of Benjamin" /></span>
 											<center>
 												<h3>Benjamin</h3>
-												Student<br>
-												Major
+												Computer Science
 											</center>
 										</div><!-- Benjamin -->
 
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Tanvi" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/tanviSS23.jpeg" alt="Photo of Tanvi" /></span>
 											<center>
 												<h3>Tanvi</h3>
-												Student<br>
-												Major
+												Computer Science
 											</center>
 										</div><!--Tanvi-->
 
@@ -156,17 +151,15 @@
 										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Emily" /></span>
 											<center>
 												<h3>Emily</h3>
-												Student<br>
-												Major
+												Computer Science (E &amp; I Minor)
 											</center>
 										</div><!-- Emily -->
 
 
-										<div class="col-4"><span class="image fit"><img src="images/helmet_green_grayRGB-750x1000R78.png" alt="Photo of Joshua" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/joshuaSS23.jpg" alt="Photo of Joshua" /></span>
 											<center>
 												<h3>Joshua</h3>
-												Student<br>
-												Major
+												Computer Science
 											</center>
 										</div><!-- Joshua -->
 
