start of newsletter week 2

--- a/belizeweb/SS2023/team.html
+++ b/belizeweb/SS2023/team.html
@@ -241,7 +241,7 @@
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/MikaylaNorton750x1000r72.jpeg" alt="Photo of Mikayla" /></span>
 											<center>
-												<h3>Mykayla</h3>
+												<h3>Mikayla</h3>
 												Masters Student<br> Data Science<br>MSU
 											</center>
 										</div><!-- Mikayla -->
