SGWC Week 1 Newsletter

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -157,17 +157,229 @@
 
         <!-- begin news section -->
         <section class="bg-white story">
-                    <div class="container">
-                        <div class="headline text-center">
-                            <div class="row">
-                                <div class="col-md-6 col-md-offset-3">
-                                    <h2 class="section-title">NEWS
-                                    <br>SPRING 2023</h2>
-                                </div>
-                            </div>
-                        </div> <!-- /.headline -->
-                    </div> <!--/.container -->
-                </section>
+            <div class="container">
+                <div class="headline text-center">
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            <h2 class="section-title">NEWS
+                                <br>SPRING 2023</h2>
+                        </div>
+                    </div>
+                </div> <!-- /.headline -->
+            </div> <!--/.container -->
+        </section>
+
+        <!--Week 1 -->
+        <section id="week1" class="news bg-white">
+            <div class="container">
+                <div class="headline text-center">
+                    <div class="row">
+                        <div class="col-md-10 col-md-offset-1 text-center">
+                            <h2 class="section-title">Week 1</h2> <!-- begin week 1 summary -->
+                            <h4 class="section-title">Let's Begin!</h4>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    We kicked off the Spring 2023 version of Spartan Girls Who Code on Saturday with enthusiastic students
+                    and incredible mentors &mdash; we hope your student is just as excited as we are for the coming weeks!
+                </p>
+                <p>
+                    We as a club are so excited to introduce the world of coding to your student! Computer science and programming
+                    is all around us in everything we do, and it is so much fun to learn! During this course, we want all students
+                    to remember that they are learning something new, it might be challenging at times. But! &mdash; learning
+                    to overcome those challenges and how to have fun with it is just as important as learning the material. We
+                    hope your student keeps this in mind as we continue throughout the program.
+                </p>
+                <p>
+                    Before we dive into a full recap of Saturday's meeting, we'd like to share a few announcements.
+                </p>
+                <h4 class="text-center">Announcements</h4>
+                <ul>
+                    <h4>1. Participant Pre-Survey</h4>
+                    <p>
+                        Students were encouraged to fill out the 2023 SGWC Participant Pre-Survey (
+                        <a href="https://forms.gle/C8PATbXv1fGWjPUv9">In-person form</a>, 
+                        <a href="https://forms.gle/C8PATbXv1fGWjPUv9">Virtual form</a>) 
+                        at Saturday's meeting, but not everyone submitted their responses.
+                        If your student has not yet completed the pre-survey,
+                        please have them do so before this Saturday's meeting.
+                    </p>
+                    <h4>2. Bonus Hour</h4>
+                    <p>
+                        Continuing as a <a href="http://technovation.cadl.org/">Technovation</a> and Girls Who Code tradition, we'll be hosting
+                        a SGWC "bonus hour" every <b>Thursday from 6:00-7:00p ET</b>
+                        (beginning this Thursday, 1/26) open to all SGWC
+                        participants. SGWC mentors will be available on Zoom during the bonus hour
+                        to resolve technical difficulties, dive deeper into the coding concepts we've learned,
+                        or to talk about computer science in general!
+                    </p>
+                    <p>
+                        Use the Zoom link below to join us for a bonus hour of fun each week.
+                        The password for our bonus hour was sent in the welcome email.
+                    </p>
+                    <ul>
+                        <li style="list-style: disc"><b>Zoom Link:</b> <a href="https://msu.zoom.us/j/94658238348">https://msu.zoom.us/j/94658238348</a> (password is provided in the welcome email)</li>
+                    </ul>
+                    <h4>3. Girls Who Code Summer Programs</h4>
+                    <p>
+                        The national organization of Girls Who Code is offering two summer opportunities for high school students.
+                    </p>
+                    <p>
+                        The <b>Summer Immersion Program (SIP)</b> is a live, virtual, 2-week introduction to computer science course for 9th-11th graders. Students will learn 
+                        HTML, CSS, and JavaScript while getting an inside look into the tech industry through company sponsors.
+                    </p>
+                    <p>
+                        The <b>Self-Paced Program</b> is a <b>free</b> remote computer science course for 9th-12th graders who prefer not to adhere 
+                        to a strict schedule. Participants can choose to earn beginner-level badges in HTML, CSS, and JavaScript 
+                        (for web development) or an intermediate-level badge in Python (for cybersecurity). Students will also have the chance to 
+                        build a community through weekly sessions and Girls Who Code activities.
+                    </p>
+                    <p>
+                        Find more details and register at <a href="https://girlswhocodesm.smapply.io/">https://girlswhocodesm.smapply.io/</a>
+                    </p>
+                    <h4>4. Looking Ahead</h4>
+                    <p>
+                        We'll see you again this <b>Saturday, 1/28 at 10a ET</b> for our second SGWC meeting of the spring, where we will review material from last week
+                        and begin learning about text + links in webpages!
+                    </p>
+                    <h4>5. Questions?</h4>
+                    <p>
+                        As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                    </p>
+                </ul>
+                <h4 class="text-center">Meeting Recap</h4>
+                <p>
+                    Mentors welcomed participants &mdash; as students rolled in mentor-student bonding had already begun!
+                </p>
+                <p>
+                    To kick things off, each virtual cohort participated in a Show & Tell Icebreaker and the in-person cohort decorated their nametags and shared their superpower of choice. Coders and mentors shared an item that 
+                    they cared about as a way to get to know a bit about one another. Engagement was high, and all enjoyed learning 
+                    cool information about their peers!
+                </p>
+                <p>
+                    Following the icebreaker, participants completed a program pre-survey which will help us
+                    evaluate and improve SGWC in future years.
+                    We've learned a lot from pre- and post-surveys in past years&mdash;we truly
+                    appreciate our participants' thoughtful feedback! If your student did not complete the
+                    pre-survey, please encourage them to do so at the link that applies to them: 
+                    <a href="https://forms.gle/C8PATbXv1fGWjPUv9">In-person form</a>, 
+                    <a href="https://forms.gle/C8PATbXv1fGWjPUv9">Virtual form</a>.
+                </p>
+                <p>
+                    Next, each cohort collaborated to write a club contract setting goals and expectations for
+                    future meetings, and set up CodeHS accounts for use in the coming weeks.
+                    We'll be working through the <a href="https://codehs.com/course/web_design_matisse/overview">
+                        "Web Design (Matisse)"
+                    </a>
+                    course offered by CodeHS!
+                </p>
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-6" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss23photos/week1/virtual_club_contract.png" height=300px>
+                        </div>
+                        <div class="col-md-6" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss23photos/week1/inperson_club_contract.png" height=300px>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <p><i>A couple of the cohort club contracts - looking good!</i></p>
+                    </div>
+                </div>
+                <p>
+                    Finally, we encouraged participants to fill out an end-of-meeting survey to gauge
+                    comfort with material covered in the meeting, and received overwhelmingly positive responses!
+                    It's always scary to try something new, so we were glad to hear students that the students got off to a good start.
+                    That said, we want to make sure <i>everyone</i> has a great time at SGWC this spring&mdash;so
+                    if you're having issues with anything, please send us an email at <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                </p>
+                <h4 class="text-center">Mentor Spotlight</h4>
+                <p>
+                    SGWC is led, organized, and run by MSU students with the help of <a href="https://www.egr.msu.edu/people/profile/iselava1">Teresa Isela Vandersloot</a> and
+                    <a href="https://www.egr.msu.edu/people/profile/ldillon">Dr. Laura Dillon </a>,
+                    and we thought it would be fun to
+                    introduce a few of our <a href="contact.html#team">team members</a> each week.
+                </p>
+                <p>
+                    To kick off our mentor spotlight series, we'd like to introduce the Spring 2023 Admins! 
+                    They have been working hard to get you all registered and keep you informed of plans for going forward.
+                </p>
+
+                <!-- mentor photos -->
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-6" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss23photos/team/TatianaSS23.jpeg" height="350">
+                            <br><br>
+                            <p><i>Tatiana Voegerl</i></p>
+                        </div>
+                        <div class="col-md-6" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss23photos/team/judySS23.jpg" height="350">
+                            <br><br>
+                            <p><i>Judy Effendi</i></p>
+                        </div>
+                    </div>
+                    <!-- mentor QA -->
+                    <div class="row">
+                        <div class="col-md-6" align="left"> <!-- Tatiana -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a third-year double majoring in Computer Science and Information Science!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                Ever since I was young, I’ve been playing with code and when I took my first programming class in high school I fell in love with computer science!
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I helped code artificial intelligence that can play multiple different games
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                In the future, I'd like to inspire more young coders to pursue computer science and help create a welcoming environment in the industry.
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Don't be afraid to try something new; even if you don't succeed you can learn a lot!
+                            </p>
+                        </div>
+                        <div class="col-md-6" align="left"> <!-- Judy -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a fourth-year majoring in Computer Science with a minor in Spanish!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I took an AP Computer Science Class in High School and really enjoyed content. I was also involved in Girls Who Code at my High School.
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I developed a Face Detection algorithm in my Biometrics Course.
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I am hoping to continue working in Computer Science and ultimately continue to influence and empower the younger generation!
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                No matter how frustrating it might get, don't give up - the end reward is so worth it. Enjoy it and have fun!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    Thanks for making last Saturday a blast, everyone. We can't wait to see you this Saturday!
+                </p>
+                <p>
+                    -The SGWC Team
+                </p>
+
+
+            </div>
+        </section> <!-- end week 1 summary -->
+
         <!-- end news section -->
 
 <!--
