--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -190,7 +190,7 @@
 										<br>
 									</div>
 									<p>
-										Above are a few key slides from our first five meetings to give an idea of what we've been up to. Be sure to check out our <a href="resources.html">resources</a> page for the full set of slides from each meeting!
+										Above are a few key slides from our last meeting to give an idea of what we've been up to. Be sure to check out our <a href="resources.html">resources</a> page for the full set of slides from each meeting!
 									</p>
                                     
 									<p>
