--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -99,8 +99,7 @@
 
 										<h4>2. Looking Back</h4>
 										<p>
-											Can you believe we've already completed our first five meetings? Time flies when you're having fun! So far, we've covered the basics of Python and Tracy the Turtle,
-											along with an introduction to loops. Check out our <a href="resources.html">resources</a> page for the slides from each meeting.
+											Can you believe we've already completed our first two meetings? Time flies when you're having fun! So far, we've covered the basics of HTML. Check out our <a href="resources.html">resources</a> page for the slides from each meeting.
 										</p>
 										<h4>3. Looking Ahead</h4>
 										<p>
@@ -209,7 +208,7 @@
 										spotlight a few of them each week.
 									</p>
 									<p>
-										To kick off our mentor spotlight series, we'd like to introduce the Spring 2023 Blue Cohort Leads!
+										To continue our mentor spotlight series, we'd like to introduce the Spring 2023 Blue Cohort Leads!
 									</p>
 				
 									<!-- mentor photos -->
