--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -237,55 +237,54 @@
 									<div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/teamPhotos/daletyAveiro750x1000r72.jpeg" height="350">
+												<img class="shadow-lg" src="images/teamPhotos/sammyhead750x1000r72.jpeg" height="350">
 												<br><br>
-												<p><i>Dalety Alveiro</i></p>
+												<p><i>Sammy Guo</i></p>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/teamPhotos/najihaSS23.png" height="350">
+												<img class="shadow-lg" src="images/teamPhotos/ryan750x1000r72.png" height="350">
 												<br><br>
-												<p><i>Najiha Jaigirdar</i></p>
+												<p><i>Ryan Spencer</i></p>
 											</div>
 										</div>
 										<!-- mentor QA -->
 										<div class="row">
-											<div class="col-md-6" align="left"> <!-- Dalety -->
+											<div class="col-md-6" align="left"> <!-- Sammy -->
 												<p>
 													<b>What are you studying?</b><br>
-													Applied Engineering Sciences with minors in Business and Leadership	
+													Major: Experience Architecture (UX/UI)
+													Minor: Computer Science												
 												</p>
 												<p>
 													<b>How did you become interested in computer science?</b><br>
-													I took an AP Computer Science Class in High School and really enjoyed content. I was also involved in Girls Who Code at my High School.
+													I loved building apps in high School.
 												</p>
 												<p>
 													<b>What's something cool you've done with computer science?</b><br>
-													I created an app that would help MSU students recycle.												</p>
+													I'm currently in a research class where we convert audio files of students virtually working together in teams and we use machine learning to understand the sentiment (positive/negative) of the speakers.												</p>
 												<p>
 													<b>What are you hoping to do with computer science in the future?</b><br>
-													In the future, I hope I can create cool websites for personal projects.												</p>
-												<p>
+													I hope to work in User Interface designer and conduct research of users within the tech field.												<p>
 													<b>What advice do you have for our students?</b><br>
-													Don't give up. It's normal to make mistakes, practice is the key to master this new language.												</p>
+													Always pursue your passion												</p>
 											</div>
-											<div class="col-md-6" align="left"> <!-- Najiha -->
+											<div class="col-md-6" align="left"> <!-- Ryan -->
 												<p>
 													<b>What are you studying?</b><br>
-													Computer Engineering with a software systems Concentration and minor in graphic design
-												</p>
+													Applied Engineering, with a concentration in Suppy Chain Management												</p>
 												<p>
 													<b>How did you become interested in computer science?</b><br>
-													I participated in Girls who code in High school!
+													I've been around it my last 4 years and have seen how amazing it can be—and how everyone who does it seems to love it.
 												</p>
 												<p>
 													<b>What's something cool you've done with computer science?</b><br>
-													I helped write code that was used to automate brake validation for Ford trucks.												</p>
-												<p>
+													My team and I used MATLAB to program a robot to navigate through an obstacle course in one of my first engineering courses.
+													<p>
 													<b>What are you hoping to do with computer science in the future?</b><br>
-													I am looking forward to learning more about automation and continuing to do outreach.												</p>
-												<p>
+													I plan on writing code that can help make the process of building infrastructure be safer and more sustainable.
+													<p>
 													<b>What advice do you have for our students?</b><br>
-													The greatest lesson you can learn is how to be a life long learner 												</p>
+													Don't give up on your goals!												</p>
 											</div>
 										</div>
 							
